Fix element alignment
Header links were breaking outside of the element beneath it even though
they were in the same container. Realized I need to add justify-content:
space-between so now the header.top and header.bottom flex together in
the way I would expect.

Most of the alignment issues so far have been learning how important
the box model is when using flexbox.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 ul {
     list-style: none;
     margin: 0;
@@ -8,8 +11,17 @@ ul {
     color: #F9FAF8;
 }
 
+a {
+    margin: 0;
+    padding: 0;
+}
+
 .header {
     background-color: #1F2937;
+    padding: 20px 100px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .header-bottom-left p {
@@ -26,13 +38,16 @@ h1 {
     font-size: 18px;
     color: #E5E7EB;
 }
+
 .header-top {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 100px;
 }
 
 .header-bottom {
     display: flex;
+    justify-content: space-between;
 }
 
 .header-bottom-left button {
@@ -40,6 +55,20 @@ h1 {
     font-size: 18px;
     color: #F9FAF8;
     border-radius: 4px;
+}
+
+.img-holder {
+    background-color: grey;
+    height: 200px;
+    width: 800px;
+    display: flex;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
 }
 
 .grids {
@@ -68,8 +97,17 @@ h1 {
 .credit {
     align-self: flex-end;
 }
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+}
 .quote-section {
     background-color: #E5E7EB;
+    padding: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .quote {
@@ -77,29 +115,30 @@ h1 {
     font-weight: light;
     font-style: italic;
     color: #1F2937;
-    padding: 200px;
-    display: flex;
-}
-
-.action-container {
-    display: flex;
-    justify-content: space-between;
-}
-.action-container-right {
-    align-items: center;
-
 }
 
 .call-to-action {
-    
-}
+    display: flex;
+    justify-content: center;
 
+}
 .action-container {
     background-color: #3882F6;
-    height: 200px;
-    width: 900px;
+    height: 100px;
+    width: 600px;
     margin: 200px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    padding: 100px;
 
+}
+
+.footer {
+    height: 100px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
